# KiPart

./: .gitignore  AUTHORS.md  AUTHORS.rst  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  JPD.md  LICENSE  Makefile  README.md  README.rst  SPD.md  notes.md  publish.sh  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: Makefile  conf.py  example-with-customfields.csv  example.csv  example1.lib  index.rst  installation.rst  make.bat  usage.rst
docs/_build/singlehtml/: index.html
docs/_build/singlehtml/_static/: documentation_options.js
icons/: make_ico.cmd
images/: example.csv
kipart/: __init__.py  __main__.py  common.py  compare_parts.py  compare_symbols.py  generic_reader.py  gowin_reader.py  jpd.py  kilib2csv.py  kilib2spd.py  kipart.py  lattice_reader.py  machxo2_reader.py  part.py  pckg_info.py  psoc5lp_reader.py  py_2_3.py  random_symbol.py  sdt2csv.py  spd.py  spd2csv.py  stm32cube_reader.py  version.py  xilinx6s_reader.py  xilinx6v_reader.py  xilinx7_reader.py  xilinxultra_reader.py
tests/: __init__.py  conftest.py  example1 - Copy.lib  example1.csv  example1.xlsx  example2 - Copy.lib  example3 - Copy.lib  example3.csv  example4 - Copy.lib  example4.csv  example5 - Copy.lib  example6 - Copy.lib  example7 - Copy.lib  helwig - Copy.lib  helwig.csv  helwig1.lib  hidden_test - Copy.lib  hyozd.csv  lt1512 - Copy.lib  lt1512.csv  random_csv.py  stm32_test - Copy.lib  stm32_test.csv  test.mk  test1 - Copy.lib  test1.csv  test_kipart.py
tests/examples/: 74hc_logic.sdt  cmp_a.spd  cmp_b.spd  create_random_symbols.py  dram.spd  dual_opamp.sdt  dual_opamp.spd  example1.csv  example1.xlsx  example2.csv  example3.csv  example4.csv  grabbag.spd  helwig.csv  hyozd.csv  mixed_types.spd  multi_sides.csv  opa2277.sdt  opa2333.sdt  opa2333.spd  pin_length.csv  property_test.csv  rt9818.sdt  spaces_test.csv  test.mk  test1.csv
tests/integrated/: SMARC_pin_table2.csv  example2.csv  hidden_test.csv  hyozd.csv  multi_sides.csv  pin_length.csv  spaces_test.csv
tests/unit/: __init__.py  compare_symbols.py  conftest.py  random_symbol.py  test_common.py  test_compare_parts.py  test_extends.py  test_kilib2csv.py  test_kipart.py
tools/: machxo3tokipart.py
